<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">KP</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
	<string name="strRegister">注册</string>
    <string name="strLogin">登录</string>
    <string name="strmale">男</string>
	<string name="strfemale">女</string>
	<string name="strloginname">用户名</string>
	<string name="stremail">邮箱/QQ</string>
	<string name="strloginpw">密码</string>
	<string name="strloginpwAgain">确认密码</string>
	<string name="strcancel">取消</string>
	<string name="strsure">确定</string>
	<string name="strfinishregister">完成注册</string>
	<string name="headpic">选择头像</string>
	<string name="photo">相册</string>
	<string name="canmer">拍照</string>
	<string name="strnews">RSS新闻</string>
	<string name="strquestion">最新问题</string>
	<string name="strtag">热门标签</string>
	
	<string name="get_more">获取更多</string>
    <string name="release_to_refresh">松开刷新</string>
    <string name="pull_to_refresh">下拉刷新</string>
    <string name="refreshing">正在刷新</string>
    <string name="updating">最近更新：</string>
</resources>