<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="330dp"
    android:layout_height="260dp"
    android:background="@drawable/tianchuk_bg" >

    <RelativeLayout
        android:id="@+id/rlTop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:gravity="center" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/strLogin"
            android:textSize="35sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlTop"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" >

        <EditText
            android:id="@+id/txtLoginName"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:background="@drawable/shuruk_bg"
            android:ems="10"
            android:text="@string/strloginname"
            android:textColor="#A29D9C" >

            <requestFocus />
        </EditText>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlPwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlLogin"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" >

        <EditText
            android:id="@+id/txtPwd"
            android:layout_width="260dp"
            android:layout_height="40dp"
            android:background="@drawable/shuruk_bg"
            android:ems="10"
            android:text="@string/strloginpw"
            android:textColor="#A29D9C" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rlbtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rlPwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:gravity="left" >

            <ImageView
                android:id="@+id/imgLogin"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/dot_dui" />

            <TextView
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="65dp"
                android:text="@string/strLogin"
                android:textColor="#3E64CB"
                android:textSize="22sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="158dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_toRightOf="@+id/relativeLayout1" >

            <ImageView
                android:id="@+id/imgCancel"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="40dp"
                android:background="@drawable/dot_cuo" />

            <TextView
                android:id="@+id/btnCalcel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="80dp"
                android:text="@string/strcancel"
                android:textColor="#3E64CB"
                android:textSize="22sp" />
        </RelativeLayout>
    </RelativeLayout>

</RelativeLayout>