<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/main"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/main_bg"
    android:orientation="vertical" >
 <!-- 注册 -->
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center" >

        <RelativeLayout
            android:id="@+id/rlTopImg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp" 
            android:layout_centerHorizontal="true"
            android:gravity="center" >

            <ImageView
                android:id="@+id/imgMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/zhuce_nan" />

            <ImageView
                android:id="@+id/imgFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/zhuce_nv"
                android:visibility="gone" >
            </ImageView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlbtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlTopImg"
            android:layout_marginTop="10dp" 
            android:layout_centerHorizontal="true" >

            <ImageView
                android:id="@+id/imgbtnMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/zhuce_d_nan_an" />

            <ImageView
                android:id="@+id/imgbtnFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@+id/imgbtnMale"
                android:background="@drawable/zhuce_d_nv" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlbtn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="70dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/strloginname"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/txtLoginName"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textView1"
                android:ems="10" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlLogin"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="70dp"
                android:gravity="right"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:text="@string/stremail"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/txtEmail"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textView2"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:ems="10" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/rlEmail"
            android:layout_centerHorizontal="true" >

            <TextView
                android:id="@+id/textView3"
                android:layout_centerVertical="true"
                android:gravity="right"
                android:layout_width="70dp"
                android:layout_height="wrap_content"
                android:text="@string/strloginpw"
                android:textColor="#000000"
                android:textSize="13sp" />

            <EditText
                android:id="@+id/txtPassword"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/textView3"
                android:layout_width="200dp"
                android:layout_height="40dp"
                android:ems="10"
                android:inputType="textPassword" >
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_below="@id/rlPassword"
            android:layout_centerHorizontal="true" >

            <Button
                android:id="@+id/btnRegisterFinish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:background="@drawable/zhuce_dot_zc" />
        </RelativeLayout>
    </RelativeLayout>
    <include
        android:id="@+id/login_register_btn"
        android:layout_width="fill_parent"
        android:layout_height="46dp"
        android:layout_alignParentBottom="true"
        layout="@layout/login_register_btn" />

   

   
</RelativeLayout>